--- a/package.json
+++ b/package.json
@@ -34,6 +34,12 @@
     "eslint": "^9.31.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "playwright": "^1.53.0"
+    "playwright": "^1.55.1"
+  },
+  "pnpm": {
+    "overrides": {
+      "mermaid": "11.12.0",
+      "vite": "6.4.1"
+    }
   }
 }
